[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atomks_visual"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.isort]
profile = "black"

[project.dependencies]
ase==3.24.0
matplotlib==3.10.1
numpy==2.2.4
pandas==2.2.3
plotly==6.0.1
streamlit==1.43.2
