[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "caspytep_interface"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.setuptools.packages.find]
where = ["caspytep_interface"]  # Adjust if your package is in a subdirectory


[tool.isort]
profile = "black"